WIP - ResourceCollection updates w/MultiReleaseJarFile